Fix for blurry graphs + optimise space

--- a/assets/styles/pages.scss
+++ b/assets/styles/pages.scss
@@ -140,7 +140,7 @@
       position: relative;
     }
 
-    #tracker-graph canvas {
+    #tracker-graph {
       width: 555px;
       height: 270px;
     }
@@ -171,7 +171,7 @@
         width: 100%;
       }
 
-      #tracker-graph canvas {
+      #tracker-graph {
         float: none;
         width: 100%;
         height: 250px;
@@ -193,7 +193,7 @@
         width: 100%;
       }
 
-      #tracker-graph canvas {
+      #tracker-graph {
         float: none;
         width: 100%;
         height: 160px;
